# eq-cir-fastapi

./: .coveragerc_unit  .coveragerc_unit_deprecated  .gitignore  CODEOWNERS  Dockerfile  Dockerfile.develop  Makefile  Pipfile  README.md  cloudbuild-dev.yaml  cloudbuild-prod.yaml  cloudbuild.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.github/scripts/: generate_openapi.py
.github/workflows/: build.yml  ci.yml  lint_and_tests.yml  main.yml  publish-main-image.yml  pull_request.yml  push_to_main.yaml  release.yaml  unit-test-and-lint.yaml
app/: config.py  handlers.py  main.py  status_router.py  storage.py
app/events/: publisher.py  subscriber.py
app/exception/: exception_interceptor.py  exception_response_models.py  exceptions.py
app/models/: classifier.py  events.py  requests.py  responses.py
app/repositories/: cloud_storage.py  firebase_loader.py  firestore.py
app/repositories/buckets/: bucket_loader.py  ci_schema_bucket_repository.py
app/repositories/firebase/: ci_firebase_repository.py  firebase_loader.py
app/routers/: ci_router.py  ci_router_restful.py  status_router.py  validator_router.py  validator_router_restful.py
app/services/: ci_classifier_service.py  ci_processor_service.py  ci_schema_location_service.py  create_guid_service.py  datetime_service.py  document_version_service.py
devtools/: CIR - Endpoints Tester - Deprecated.postman_collection.json  CIR - Endpoints Tester.postman_collection.json  CIR - Local Docker.postman_collection.json
devtools/firebase-emulator/: firebase.json
gateway/: openapi.yaml
requirements/: development.txt  production.txt
scripts/: deploy_to_dev_project.sh  generate_key.sh  generate_openapi.py  publish_multiple_ci.py
scripts/CIR_test_schema/: cir_test_schema.json
tests/integration_tests/: conftest.py  test_http_delete_ci.py  test_http_delete_ci_v1.py  test_http_delete_ci_v1_restful.py  test_http_get_ci_metadata_v1.py  test_http_get_ci_metadata_v1_restful.py  test_http_get_ci_metadata_v2.py  test_http_get_ci_metadata_v2_restful.py  test_http_get_ci_metadata_v3.py  test_http_get_ci_metadata_v3_restful.py  test_http_get_ci_schema_v1.py  test_http_get_ci_schema_v1_restful.py  test_http_get_ci_schema_v2.py  test_http_get_ci_schema_v2_restful.py  test_http_get_ci_valiator_metadata_v1.py  test_http_get_ci_valiator_metadata_v1_restful.py  test_http_get_ci_validator_metadata.py  test_http_get_deployment_status.py  test_http_patch_validator_version_v1.py  test_http_patch_validator_version_v1_restful.py  test_http_post_ci_metadata_v1.py  test_http_post_ci_schema.py  test_http_post_ci_schema_v1.py  test_http_post_ci_schema_v1_restful.py  test_http_post_ci_schema_v2.py  test_http_post_ci_schema_v2_restful.py  test_http_post_ci_schema_v3.py  test_http_post_ci_schema_v3_restful.py  test_http_put_status_v1.py  test_http_put_validator_version.py  test_http_put_validator_version_v1.py  test_http_put_validator_version_v1_restful.py  utils.py
tests/integration_tests/helpers/: integration_helpers.py  pubsub_helper.py
tests/test_config/: endpoints.py  endpoints_loader.py
tests/test_data/: ci_test_data.py  classifier_invalid_input.json
tests/unit_tests/: conftest.py  test_database.py  test_firestore.py  test_handlers.py  test_main.py  test_models.py  test_status_router.py
tests/unit_tests/endpoints/: test_http_delete_ci.py  test_http_delete_ci_v1.py  test_http_delete_ci_v1_restful.py  test_http_get_ci_metadata_v1.py  test_http_get_ci_metadata_v1_restful.py  test_http_get_ci_metadata_v2.py  test_http_get_ci_metadata_v2_restful.py  test_http_get_ci_metadata_v3.py  test_http_get_ci_metadata_v3_restful.py  test_http_get_ci_schema_v1.py  test_http_get_ci_schema_v1_restful.py  test_http_get_ci_schema_v2.py  test_http_get_ci_schema_v2_restful.py  test_http_get_ci_validator_metadata.py  test_http_get_ci_validator_metadata_v1.py  test_http_get_status.py  test_http_post_ci.py  test_http_post_ci_unhappy_paths.py  test_http_post_ci_v1.py  test_http_post_ci_v1_restful.py  test_http_post_ci_v2.py  (+5 more)
(+26 files in other folders)
